# modelui

./: .env  Home.py  pyproject.toml
modelui/: app.py  data.py  googlevision.py  plot.py
modelui/resources/: matches.parquet  matches_margins.parquet  matches_margins_likelihood.parquet  matches_margins_weighted.parquet  predictions.parquet  predictions_margins.parquet  predictions_margins_likelihood.parquet  predictions_margins_weighted.parquet
pages/: 01_Analyze_prediction.py
